# controls

./: .README.md.swp
devel/: .catkin  .rosinstall  .setup.bash.swp  setup.sh
devel/include/whirlybird_msgs/: Command.h  Whirlybird.h
devel/lib/pkgconfig/: whirlybird_controller.pc  whirlybird_description.pc  whirlybird_msgs.pc  whirlybird_sim.pc
devel/lib/python2.7/dist-packages/whirlybird_msgs/msg/: _Command.py  _Whirlybird.py
devel/share/common-lisp/ros/whirlybird_msgs/msg/: Command.lisp  Whirlybird.lisp
devel/share/gennodejs/ros/whirlybird_msgs/msg/: Command.js  Whirlybird.js
devel/share/roseus/ros/whirlybird_msgs/: manifest.l
devel/share/whirlybird_controller/cmake/: whirlybird_controllerConfig.cmake
devel/share/whirlybird_description/cmake/: whirlybird_descriptionConfig.cmake
devel/share/whirlybird_msgs/cmake/: whirlybird_msgs-msg-paths.cmake  whirlybird_msgsConfig.cmake
devel/share/whirlybird_sim/cmake/: whirlybird_simConfig.cmake
src/whirlybird_description/: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/whirlybird_description/launch/: visualize.launch  visualize_pwm.launch
src/whirlybird_description/rviz/: whirlybird.rviz  whirlybird_pwm.rviz
src/whirlybird_description/src/: joint_state_publisher.py  whirlybird_panel.cpp  whirlybird_panel.h  whirlybird_panel_pwm.cpp  whirlybird_panel_pwm.h
src/whirlybird_description/urdf/: whirlybird.urdf
src/whirlybird_msgs/: CMakeLists.txt  package.xml
src/whirlybird_msgs/msg/: Command.msg  Whirlybird.msg
src/whirlybird_sim/scripts/: .whirlybird_sim.py.swp
(+2 files in other folders)
